--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 		<title>New Web Project</title>
 	</head>
 	<body>
-		<h1>New Web Project Page</h1>
+		<div id="main-content">
+			<h1>New Web Project Page</h1>
+			<div class="button-holder">
+				<div class="button prev">PREV</div>
+				<div class="button next">NEXT</div>
+			</div>
+
+			<div class="image-holder">
+				<img src="images/drain_0m.png">
+				<img src="images/drain_50m.png">
+				<img src="images/drain_100m.png">
+				<img src="images/drain_200m.png">
+				<img src="images/drain_500m.png">
+				<img src="images/drain_1km.png">
+				<img src="images/drain_2km.png">
+				<img src="images/drain_3km.png">
+				<img src="images/drain_5km.png">
+				<img src="images/drain_ed.png">
+				<img src="images/drain_nl.png">
+			</div>
+			
+		</div>
+	
 	</body>
 </html>
-
