created about nav

--- a/index.html
+++ b/index.html
@@ -6,17 +6,34 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script type="text/javascript" src="scripts.js"></script>
 		<link type="text/css" rel="stylesheet" href="styles.css" />
-		<title>New Web Project</title>
+		<title>Drain the Oceans</title>
 	</head>
 	<body>
 		<div id="main-content">
-			<h1>New Web Project Page</h1>
-			<div class="button-holder">
-				<div class="button prev">PREV</div>
-				<div class="button next">NEXT</div>
+			<h1>Drain the Oceans</h1>
+			
+			<div class="about-holder">
+				<div class="about-head">
+					About
+				</div>
+				<br />
+				<div class="about-text">
+					This slide show is adapted from <a href="http://what-if.xkcd.com/53/">an xkcd comic</a>.
+				</div>
+				<div class="about-head">
+					Share
+				</div>
+				<br />
+				<div class="about-text">
+					<a class="facebook" href="JavaScript:window.open('http://www.facebook.com/sharer.php?u=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">Facebook</a><br />
+					<a class="twitter" href="JavaScript:window.open('https://twitter.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html&text=This data visualization shows which nationalities received the most green cards in 2012&hashtags=immigration,dataviz&related=Harry_Stevens','','width=450,height=350')">Twitter</a><br />
+					<a class="google" href="JavaScript:window.open('https://plus.google.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">Google+</a><br />
+					<a class="linkedin" href="JavaScript:window.open('https://linkedin.com/cws/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">LinkedIn</a>
+				</div>
 			</div>
-
+			
 			<div class="image-holder">
+				<!-- images will go here
 				<img src="images/drain_0m.png">
 				<img src="images/drain_50m.png">
 				<img src="images/drain_100m.png">
@@ -28,9 +45,21 @@
 				<img src="images/drain_5km.png">
 				<img src="images/drain_ed.png">
 				<img src="images/drain_nl.png">
+				-->
 			</div>
-			
+
+			<div class="button-holder">
+				<div class="button prev">
+					PREV
+				</div>
+				<div class="button next">
+					NEXT
+				</div>
+			</div>
+
+
+
 		</div>
-	
+
 	</body>
 </html>
