--- a/index.html
+++ b/index.html
@@ -11,42 +11,6 @@
 	<body>
 		<div id="main-content">
 			<h1>Drain the Oceans</h1>
-			
-			<div class="about-holder">
-				<div class="about-head">
-					About
-				</div>
-				<br />
-				<div class="about-text">
-					This slide show is adapted from <a href="http://what-if.xkcd.com/53/">an xkcd comic</a>.
-				</div>
-				<div class="about-head">
-					Share
-				</div>
-				<br />
-				<div class="about-text">
-					<a class="facebook" href="JavaScript:window.open('http://www.facebook.com/sharer.php?u=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">Facebook</a><br />
-					<a class="twitter" href="JavaScript:window.open('https://twitter.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html&text=This data visualization shows which nationalities received the most green cards in 2012&hashtags=immigration,dataviz&related=Harry_Stevens','','width=450,height=350')">Twitter</a><br />
-					<a class="google" href="JavaScript:window.open('https://plus.google.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">Google+</a><br />
-					<a class="linkedin" href="JavaScript:window.open('https://linkedin.com/cws/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')">LinkedIn</a>
-				</div>
-			</div>
-			
-			<div class="image-holder">
-				<!-- images will go here
-				<img src="images/drain_0m.png">
-				<img src="images/drain_50m.png">
-				<img src="images/drain_100m.png">
-				<img src="images/drain_200m.png">
-				<img src="images/drain_500m.png">
-				<img src="images/drain_1km.png">
-				<img src="images/drain_2km.png">
-				<img src="images/drain_3km.png">
-				<img src="images/drain_5km.png">
-				<img src="images/drain_ed.png">
-				<img src="images/drain_nl.png">
-				-->
-			</div>
 
 			<div class="button-holder">
 				<div class="button prev">
@@ -58,6 +22,34 @@
 			</div>
 
 
+			<div class="image-holder">
+			</div>
+			
+			<div class="about-holder">
+				<div class="bubble">
+					<div class="about-head">
+						About
+					</div>
+					<br />
+					<div class="about-text">
+						This slide show is adapted from <a href="http://what-if.xkcd.com/53/" target="_blank">an xkcd comic</a>.
+					</div>
+				</div>
+
+				<div class="bubble">
+					<div class="about-head">
+						Share
+					</div>
+					<br />
+					<div class="about-text social">
+						<a class="facebook" href="JavaScript:window.open('http://www.facebook.com/sharer.php?u=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/facebook.png"></a>&nbsp;
+						<a class="twitter" href="JavaScript:window.open('https://twitter.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=450,height=350')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/twitter.png"></a>
+						<a class="google" href="JavaScript:window.open('https://plus.google.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/google.png"></a>&nbsp;
+						<a class="linkedin" href="JavaScript:window.open('https://linkedin.com/cws/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/linkedin.png"></a>
+					</div>
+				</div>
+			</div>
+			
 
 		</div>
 
