--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	</head>
 	<body>
 		<div id="main-content">
-			<h1>Drain the Oceans</h1>
+			<div class="bubble">
+				<h1>Drain the Oceans</h1>
+				<h3>A slideshow adapted from xkcd</h3>
+			</div>
 
 			<div class="button-holder">
 				<div class="button prev">
@@ -42,9 +45,9 @@
 					</div>
 					<br />
 					<div class="about-text social">
-						<a class="facebook" href="JavaScript:window.open('http://www.facebook.com/sharer.php?u=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/facebook.png"></a>&nbsp;
+						<a class="facebook" href="JavaScript:window.open('http://www.facebook.com/sharer.php?u=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/facebook.png"></a>
 						<a class="twitter" href="JavaScript:window.open('https://twitter.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=450,height=350')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/twitter.png"></a>
-						<a class="google" href="JavaScript:window.open('https://plus.google.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/google.png"></a>&nbsp;
+						<a class="google" href="JavaScript:window.open('https://plus.google.com/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/google.png"></a>
 						<a class="linkedin" href="JavaScript:window.open('https://linkedin.com/cws/share?url=http://www.columbia.edu/~hjs2136/immigrant-map/index.html','','width=657,height=400,scrollbars=1')"><img style="opacity:0.8" onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.8" src="icons/PNG/linkedin.png"></a>
 					</div>
 				</div>
